{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Gameplay",
            "id": "0c1fd4da-7530-4071-908e-8ed56393ef3a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "9ac1408c-ee26-40c2-96a4-636e48d98545",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "02ad9bfd-93ef-494a-9ee4-ae84513250c9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TakeDown",
                    "type": "Button",
                    "id": "bcd34295-6b38-4c93-8cdf-ae7fb841277c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8de6823-66f5-4853-a597-91ab4a0e5411",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "beb4da5c-6327-4f3f-af02-88049c7c0a3f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2d98bc5-a158-4a59-a7d1-fc43d86e1d44",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56860bc8-5b02-40de-9932-6482eabd9f7e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72a539d5-2ee6-42e7-98b7-cc3ccd823f04",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}